--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "deepscatter-app",
   "version": "0.1.0",
+  "homepage": "https://shellyscheng.github.io/React-DeepScatter-Exploration",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -19,6 +20,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -44,6 +47,7 @@
     ]
   },
   "devDependencies": {
-    "@types/axios": "^0.14.0"
+    "@types/axios": "^0.14.0",
+    "gh-pages": "^5.0.0"
   }
 }
